# pi-benchmark

./: Cargo.toml  README.md
.github/workflows/: pages.yml
dashboard/: index.html  script.js  styles.css
dashboard/data/: sample_results.json
scripts/: run_all.ps1  run_all.sh  run_monte.ps1  run_monte.sh  run_single.ps1  run_single.sh
src/: main.rs
